--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -1,6 +1,6 @@
 <div class='card'>
     <div class= 'card-header'>
-        Product List
+        {{pageTitle}}
     </div>
 </div>
 <div class= 'card-body'>
@@ -17,7 +17,7 @@
     </div>
 
     <div class="table-responsive">
-        <table class="table">
+        <table class='table' *ngIf='products.length'>
             <thead>
                 <tr>
                     <th>
@@ -25,15 +25,22 @@
                             show image
                         </button>
                     </th>
-                    <th>Products</th>
+                    <th>Product</th>
                     <th>Cost</th>
                     <th>Available</th>
                     <th>Price</th>
-                    <th>Star Rating</th>
+                    <th>5 Star Rating</th>
                 </tr>
             </thead>
             <tbody>
-
+                <tr *ngFor='let product of products'>
+                    <td></td>
+                    <td>{{product.productName}}</td>
+                    <td>{{product.productCode}}</td>
+                    <td>{{product.releaseDate}}</td>
+                    <td>{{product.price}}</td>
+                    <td>{{product.starRating}}</td>
+                </tr>
             </tbody>
         </table>
       </div>
