Interface, encapsulation, lifecycle hooks and custom pipe

--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -28,7 +28,7 @@
                         </button>
                     </th>
                     <th>Product</th>
-                    <th>Cost</th>
+                    <th>Code</th>
                     <th>Available</th>
                     <th>Price</th>
                     <th>5 Star Rating</th>
@@ -44,9 +44,9 @@
                         [style.margin.px]= 'imageMargin'>
                     </td>
                     <td>{{product.productName}}</td>
-                    <td>{{product.productCode}}</td>
+                    <td>{{product.productCode | lowercase | convertToSpaces:'-'}}</td>
                     <td>{{product.releaseDate}}</td>
-                    <td>{{product.price}}</td>
+                    <td>{{product.price | currency:'USD':'symbol':'1.2-2'}}</td>
                     <td>{{product.starRating}}</td>
                 </tr>
             </tbody>
